chore(gitignore): 忽略构建产物与计划文档目录，并同步有用代码文档
补充 **/target、test-results、.mimosa、docs/superpowers 等忽略规则；提交前后端测试、KMS/租户与文档整理，不纳入运行时配置和计划文档。

Co-authored-by: Cursor <cursoragent@cursor.com>